--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,9 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginEnd="8dp"
     android:layout_marginTop="8dp"
-    android:layout_marginStart="8dp">
+    android:layout_marginStart="8dp"
+    app:cardCornerRadius="10dp"
+    android:padding="10dp"
+    app:cardElevation="1dp"
+    android:background="@mipmap/bg2">
 
     <RelativeLayout
         android:padding="8dp"
@@ -26,20 +31,20 @@
 
         <TextView
             android:id="@+id/txtsongname"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_toEndOf="@+id/imgsong"
-            android:padding="6dp"
-            android:textColor="#FFF"
-            android:text="Song Name"
-            android:textSize="15sp"
-            android:singleLine="true"
-            android:marqueeRepeatLimit="marquee_forever"
             android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:padding="6dp"
             android:scrollHorizontally="true"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp">
+            android:singleLine="true"
+            android:text="Song Name"
+            android:textColor="#000"
+            android:textSize="15sp">
 
         </TextView>
 
