--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorPrimary">#FF362E</color>
     <color name="colorPrimaryDark">#FF362E</color>
     <color name="colorAccent">#FF362E</color>
+    <color name="colorPink">#33FFC0CB</color>
 </resources>
