--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical"
     android:weightSum="10"
     tools:context=".PlayerActivity">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -32,14 +31,12 @@
             android:layout_height="wrap_content">
 
         </TextView>
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageview"
             android:layout_marginBottom="8dp"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:src="@drawable/muzix">
-
-        </ImageView>
+            android:src="@drawable/muzix"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="60dp">
